[metadata]
version = 0.0.1
description = Quick access to code favorites
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = qo
display_name = qo

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

