[metadata]
name = qo
version = 0.0.15
url = https://github.com/otosense/qo
platforms = any
description_file = README.md
root_url = https://github.com/i2mint
license = mit
author = OtoSense
author_email = thorwhalen1@gmail.com
description = Quick access to code favorites
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = qo

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

